modified index.html and add mysite folder

--- a/ycaidao/index.html
+++ b/ycaidao/index.html
@@ -89,7 +89,75 @@
 </div>
 <!--楼层商品展示区域-->
 <div class="ycd-foor ycd-floor-goods-area">
-    <img src="images/goods_img.jpg">
+      <div class="ycd-floor-goods-area-item">
+      	<i class="count-down green">8折</i>
+        <h2>生态豌豆</h2>
+        <p class="info">
+        	<span class="price">￥2.8</span>
+        	<span class="weight">500g</span>
+        </p>
+        <div class="goods-img">
+					<a href=""><img src="images/goods_pic1.png"></a>
+		</div>
+      </div>
+      <div class="ycd-floor-goods-area-item">
+      	<i class="count-down orange">5折</i>
+        <h2>生态豌豆</h2>
+        <p class="info">
+        	<span class="price">￥2.8</span>
+        	<span class="weight">500g</span>
+        </p>
+        <div class="goods-img">
+					<a href=""><img src="images/goods_pic2.png"></a>
+		</div>
+      </div>
+      <div class="ycd-floor-goods-area-item">
+      	<i class="count-down green">8折</i>
+        <h2>生态豌豆</h2>
+        <p class="info">
+        	<span class="price">￥2.8</span>
+        	<span class="weight">500g</span>
+        </p>
+        <div class="goods-img">
+					<a href=""><img src="images/goods_pic1.png"></a>
+		</div>
+      </div>
+      <div class="ycd-floor-goods-area-item">
+      	<i class="count-down orange">5折</i>
+        <h2>生态豌豆</h2>
+        <p class="info">
+        	<span class="price">￥2.8</span>
+        	<span class="weight">500g</span>
+        </p>
+        <div class="goods-img">
+					<a href=""><img src="images/goods_pic2.png"></a>
+		</div>
+      </div>
+      <div class="ycd-floor-goods-area-item">
+      	<i class="count-down green">8折</i>
+        <h2>生态豌豆</h2>
+        <p class="info">
+        	<span class="price">￥2.8</span>
+        	<span class="weight">500g</span>
+        </p>
+        <div class="goods-img">
+					<a href=""><img src="images/goods_pic1.png"></a>
+		</div>
+      </div>
+      <div class="ycd-floor-goods-area-item">
+      	<i class="count-down orange">5折</i>
+        <h2>生态豌豆</h2>
+        <p class="info">
+        	<span class="price">￥2.8</span>
+        	<span class="weight">500g</span>
+        </p>
+        <div class="goods-img">
+					<a href=""><img src="images/goods_pic2.png"></a>
+		</div>
+      </div>
+</div>
+<div class="ycd-bottom-fixed">
+	
 </div>
 <!--底部导航栏-->
 <div class="ycd-bottom">
