--- a/ycaidao/index.html
+++ b/ycaidao/index.html
@@ -25,8 +25,8 @@
 		<i class="ycd-font-icon ycd-js-search-icon">&#xe626;</i>
 	</div>
 </div>
-<div class="ycd-header-search-box ycd-index-return">
-	<a class="ycd-header-search-return">
+<div class="ycd-header-search-box ">
+	<a class="ycd-header-search-return ycd-index-return" href="javascript:void(0);">
               < 返回
 	</a>
 	<input type="text" name="search" value="" placeholder="请输入菜名名称和品牌" class="ycd-header-search-box-input">
