add new alert.scss and js

--- a/ycaidao2/category.html
+++ b/ycaidao2/category.html
@@ -376,16 +376,48 @@
 <script>
     //测试弹出窗口插件
     (function($){
+    	/*
+    	var specDivForm= document.createElement('form');
+    	specDivForm.id="specDivForm";
+    	for (var spec = 0; spec < message.length; spec++) {
+    		specDivForm.innerHTML += '<h2>'+message[spec]['name']+'</h2>'
+    		if (message[spec]['attr_type'] == 1)
+            {
+            	    for (var val_arr = 0; val_arr < message[spec]['values'].length; val_arr++)
+			        {
+			          if (val_arr == 0)
+			          {
+			            specDivForm.innerHTML += "<p><input  type='radio' name='spec_" + message[spec]['attr_id'] + "' value='" + message[spec]['values'][val_arr]['id'] + "' id='spec_value_" + message[spec]['values'][val_arr]['id'] + "' checked /> <font color=#555555>" + message[spec]['values'][val_arr]['label'] + '</font> [' + message[spec]['values'][val_arr]['format_price'] + ']</font></p>';
+			          }
+			          else
+			          {
+			            specDivForm.innerHTML += "<p><input  type='radio' name='spec_" + message[spec]['attr_id'] + "' value='" + message[spec]['values'][val_arr]['id'] + "' id='spec_value_" + message[spec]['values'][val_arr]['id'] + "' /> <font color=#555555>" + message[spec]['values'][val_arr]['label'] + '</font> [' + message[spec]['values'][val_arr]['format_price'] + ']</font></p>';
+			          }
+			        }
+			        specDivForm.innerHTML += "<input type='hidden' name='spec_list' value='" + val_arr + "' />";
+
+            }else{
+					for (var val_arr = 0; val_arr < message[spec]['values'].length; val_arr++)
+					{
+					specDivForm.innerHTML += "<p><input  type='checkbox' name='spec_" + message[spec]['attr_id'] + "' value='" + message[spec]['values'][val_arr]['id'] + "' id='spec_value_" + message[spec]['values'][val_arr]['id'] + "' /> <font color=#555555>" + message[spec]['values'][val_arr]['label'] + ' [' + message[spec]['values'][val_arr]['format_price'] + ']</font></p>';
+					}
+					specDivForm.innerHTML += "<input type='hidden' name='spec_list' value='" + val_arr + "' />";
+            }
+    	}
+    	
+    	document.body.appendChild(parent);
+
         $('body').popup({
-            title:'表单提交'
+            title:select_spe
             ,id:'pop-1'
             ,closeOnOk:true
-            ,ok:'提交'
-            ,onOk:function(){
-               
+            ,ok:'提交',
+            formId:'specDivForm',
+            onOk:function(){
+               submit_divflow(goods_id,parent);
             },
-            message:'这是一个弹出框的测试'
-        });
+            message:''
+        });*/
 
     })(Zepto);
 	var mySwiper2 = new Swiper('#swiper-container2',{
@@ -427,5 +459,6 @@
    $('.yc-swiper-right-list-content').hide().eq(0).show('slow');
 	
 </script>
+
 </body>
 </html>
