--- a/ycaidao2/my.html
+++ b/ycaidao2/my.html
@@ -97,6 +97,13 @@
 		   		<dd>></dd>
 		   	</a>
 	   	</dl>
+	   	<dl>
+		   <a href="">
+		   		<span class="ycd-font-icon ycd-my-op-icon">&#xe63d;</span>
+		   		<dt>我的搜藏</dt>
+		   		<dd>></dd>
+		   	</a>
+	   	</dl>
 	   <dl>
 		   <a href="">
 		   		<span class="ycd-font-icon ycd-my-op-icon">&#xe63d;</span>
@@ -111,11 +118,10 @@
 		   		<dd>></dd>
 		   	</a>
 	   	</dl>
-	   <dl>
+	   <dl style="background: none;">
 		   <a href="" class="ycd-light-green">
 		   		<span class="ycd-font-icon ycd-my-op-icon">&#xe63c;</span>
 		   		<dt class="ycd-light-green">客服电话 4008-114-510</dt>
-		   		<dd>></dd>
 		   	</a>
 	   	</dl>
 </div>
