--- a/webtools/cookie.html
+++ b/webtools/cookie.html
@@ -8,6 +8,10 @@
 	<script src="js/cookie.js"></script>
 </head>
 <body>
-	
+	<script type="text/javascript">
+			 var cookiestorage = new cookieStorage(1*60*60*24,'/');
+	         cookiestorage.setItem('username','laike');
+	         //cookiestorage.setItem('password','lake1355')
+	</script>
 </body>
 </html>
