--- a/jquery-float-tips-plugin/index.html
+++ b/jquery-float-tips-plugin/index.html
@@ -25,7 +25,9 @@
 	<script>
          $(document).ready(function(){
                 $('.jq-tips-wrapper').tips({
-                	  debugmode :true
+                	  debugmode :true,
+                	  bottom:50,
+                	  right:50
                 });
          });
 	</script>
