this is the first version of the plugin

--- a/jquery-float-tips-plugin/index.html
+++ b/jquery-float-tips-plugin/index.html
@@ -25,10 +25,10 @@
 	<script>
          $(document).ready(function(){
                 $('.jq-tips-wrapper').tips({
-                	  debugmode :true,
-                	  bottom:50,
-                	  right:50
+                	  bottom:10,
+                	  right:10
                 });
          });
 	</script>
 </body>
+</html>
