add modified js file and html file

--- a/webtools/mousewheel.html
+++ b/webtools/mousewheel.html
@@ -15,11 +15,12 @@
     	width:70%;
     	display:block;
     }
+    .enclosure{
+    	border:solid black 10px;
+    	margin:10px;
+    }
 </style>
 <img src="images/test.jpg" alt="" id="content">
 <script src="js/mousewheel.js"></script>
-<script>
-	
-</script>	
 </body>
 </html>
