modified some files

--- a/jquery-float-tips-plugin/index.html
+++ b/jquery-float-tips-plugin/index.html
@@ -13,7 +13,7 @@
     	     </div>
     	     <div class="jq-tips-content">
     	     	  <div class="jq-tips-content-inner">
-    	     	  	辞旧迎新过新年，客家欢乐迎新年！
+    	     	  	辞旧迎新过新年，客家欢乐迎新年！辞旧迎新过新年，客家欢乐迎新年！辞旧迎新过新年，客家欢乐迎新年！辞旧迎新过新年，客家欢乐迎新年！辞旧迎新过新年，客家欢乐迎新年！辞旧迎新过新年，客家欢乐迎新年！辞旧迎新过新年，客家欢乐迎新年！
     	     	  </div>
     	     </div>
     	     <div class="jq-tips-content-bottom">
