--- a/ycaidao/index.html
+++ b/ycaidao/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="format-detection" content="telephone=no" />
     <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="css/gloabal.css" rel="stylesheet" type="text/css" />
     <link href="css/ycaidao.css" rel="stylesheet" type="text/css" />
-	<title>有菜到手机客户端</title>
+    <link rel="stylesheet" type="text/css" href="css/slider.css">
+    <title>有菜到手机客户端</title>
 </head>
 <body>
 <!--头部搜索-->
@@ -21,6 +22,37 @@
 		<i class="ycd-font-icon ycd-js-search-icon">&#xe626;</i>
 	</div>
 </div>
+<!--头部轮播部分-->
+<div class="ycd-header-slider ycd-slider yc-slider-wt2" id="ycd-header-banner">
+	   <div class="ycd-slider-box ycd-slider-ks-ts">
+	   	  <div class="ycd-slider-wrap">
+	   	  	  <img src="images/banner/banner1.jpg">
+	   	  </div>	
+	   	   <div class="ycd-slider-wrap">
+	   	  	  <img src="images/banner/banner2.jpg">
+	   	  </div>	
+	   	   <div class="ycd-slider-wrap">
+	   	  	  <img src="images/banner/banner3.jpg">
+	   	  </div>	
+	   	   <div class="ycd-slider-wrap">
+	   	  	  <img src="images/banner/banner4.jpg">
+	   	  </div>	
+	   	   <div class="ycd-slider-wrap">
+	   	  	  <img src="images/banner/banner5.jpg">
+	   	  </div>	
+	   	   <div class="ycd-slider-wrap">
+	   	  	  <img src="images/banner/banner6.jpg">
+	   	  </div>	
+	   </div>
+	   <ul class="ycd-ks-wt">
+              <li class="ycd-ks-t2"></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+	   </ul>
+</div>
 <div class="ycd-header-search-box">
 	
 </div>
@@ -28,7 +60,37 @@
 <div class="ycd-header-search-result">
 	
 </div>
-
+<!--首页分类列表-->
+<div class="ycd-index-categry-list">
+	  <div class="ycd-index-categry-item">
+	  	 <img src="images/index_catogry_icon_1.png">
+	  	 <span class="ycd-index-categry-name">肉类</span>
+	  </div>
+	  <div class="ycd-index-categry-item">
+	  	 <img src="images/index_catogry_icon_2.png">
+	  	 <span class="ycd-index-categry-name">蔬菜</span>
+	  </div>
+	  <div class="ycd-index-categry-item">
+	  	 <img src="images/index_catogry_icon_3.png">
+	  	 <span class="ycd-index-categry-name">粮油</span>
+	  </div>
+	  <div class="ycd-index-categry-item">
+	  	 <img src="images/index_catogry_icon_4.png">
+	  	 <span class="ycd-index-categry-name">副食</span>
+	  </div>
+</div>
+<!--楼层-->
+<div class="ycd-floor ycd-floor-1">
+          <img src="images/floor_organic_food.jpg">
+</div>
+<div class="ycd-floor ycd-floor-name">
+          <h2>精品特卖</h2>
+          <a class="ycd-more">更多 〉</a>
+</div>
+<!--楼层商品展示区域-->
+<div class="ycd-foor ycd-floor-goods-area">
+    <img src="images/goods_img.jpg">
+</div>
 <!--底部导航栏-->
 <div class="ycd-bottom">
 	  <div class="ycd-foot-tab">
@@ -57,6 +119,7 @@
 	  </div>
 </div>
 <script src="js/zepto.js"></script>
+<script src="js/zepto.slider.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
