--- a/ycaidao/index.html
+++ b/ycaidao/index.html
@@ -16,33 +16,34 @@
 <body>
 <!--头部搜索-->
 <div class="ycd-header-search-box-top ycd-gradient-top-bg">
-	<span class="ycd-location-txt l">无锡</span>
+	<span class="ycd-location-txt l" data-location="无锡">无锡</span>
 	<div class="ycd-js-search-input-box">
 		<input type="text" name="search" value="" placeholder="请输入菜名" class="ycd-js-search-input">
 		<i class="ycd-font-icon ycd-js-search-icon">&#xe626;</i>
 	</div>
 </div>
 <!--头部轮播部分-->
-<div class="ycd-header-slider ycd-slider yc-slider-wt2" id="ycd-header-banner">
+<div class=" ycd-slider yc-slider-wt2" id="ycd-header-banner">
 	   <div class="ycd-slider-box ycd-slider-ks-ts">
 	   	  <div class="ycd-slider-wrap">
-	   	  	  <img src="images/banner/banner1.jpg">
+	   	  	  <img src="images/banner/banner1.jpg"/>
 	   	  </div>	
 	   	   <div class="ycd-slider-wrap">
-	   	  	  <img src="images/banner/banner2.jpg">
+	   	  	  <img src="images/banner/banner2.jpg"/>
 	   	  </div>	
 	   	   <div class="ycd-slider-wrap">
-	   	  	  <img src="images/banner/banner3.jpg">
+	   	  	  <img src="images/banner/banner3.jpg"/>
 	   	  </div>	
 	   	   <div class="ycd-slider-wrap">
-	   	  	  <img src="images/banner/banner4.jpg">
+	   	  	  <img src="images/banner/banner4.jpg"/>
 	   	  </div>	
 	   	   <div class="ycd-slider-wrap">
-	   	  	  <img src="images/banner/banner5.jpg">
+	   	  	  <img src="images/banner/banner5.jpg"/>
 	   	  </div>	
 	   	   <div class="ycd-slider-wrap">
-	   	  	  <img src="images/banner/banner6.jpg">
+	   	  	  <img src="images/banner/banner6.jpg"/>
 	   	  </div>	
+	   	  
 	   </div>
 	   <ul class="ycd-ks-wt">
               <li class="ycd-ks-t2"></li>
