modified index.html and and topbar bgchange effect add http.js

--- a/webtools/http.html
+++ b/webtools/http.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>http</title>
 	<link rel="stylesheet" href="">
+	<script src="js/http.js"></script>
 </head>
 <body>
 
