--- a/ycaidao/index.html
+++ b/ycaidao/index.html
@@ -8,8 +8,13 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="format-detection" content="telephone=no" />
     <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <link rel="stylesheet" type="text/css" href="build/ycaidao.min.css">
+    <link rel="stylesheet" type="text/css" href="css/gloabal.css">
+    <link rel="stylesheet" type="text/css" href="css/slider.css">
+    <link rel="stylesheet" type="text/css" href="css/ycaidao.css">
     <title>有菜到手机客户端</title>
+        <script type="text/javascript">
+          var _curpage = 'index';
+    </script>
 </head>
 <body>
 <!--头部搜索-->
@@ -20,143 +25,181 @@
 		<i class="ycd-font-icon ycd-js-search-icon">&#xe626;</i>
 	</div>
 </div>
-<!--头部轮播部分-->
-<div class=" ycd-slider yc-slider-wt2" id="ycd-header-banner">
-	   <div class="ycd-slider-box ycd-slider-ks-ts">
-	   	  <div class="ycd-slider-wrap">
-	   	  	  <img src="images/banner/banner1.jpg"/>
-	   	  </div>	
-	   	   <div class="ycd-slider-wrap">
-	   	  	  <img src="images/banner/banner2.jpg"/>
-	   	  </div>	
-	   	   <div class="ycd-slider-wrap">
-	   	  	  <img src="images/banner/banner3.jpg"/>
-	   	  </div>	
-	   	   <div class="ycd-slider-wrap">
-	   	  	  <img src="images/banner/banner4.jpg"/>
-	   	  </div>	
-	   	   <div class="ycd-slider-wrap">
-	   	  	  <img src="images/banner/banner5.jpg"/>
-	   	  </div>	
-	   	   <div class="ycd-slider-wrap">
-	   	  	  <img src="images/banner/banner6.jpg"/>
-	   	  </div>	
-	   </div>
-	   <ul class="ycd-ks-wt">
-              <li class="ycd-ks-t2"></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-	   </ul>
+<div class="ycd-header-search-box ycd-index-return">
+	<a class="ycd-header-search-return">
+              < 返回
+	</a>
+	<input type="text" name="search" value="" placeholder="请输入菜名名称和品牌" class="ycd-header-search-box-input">
+	<a href="javascript:void(0);" class="ycd-btn ycd-btn-search-btn">搜索</a>
 </div>
-<div class="ycd-header-search-box">
-	
+<div class="ycd-header-search-container">
+          <h2>历史搜索</h2>
+          <div class="ycd-header-search-tags">
+              <a >苹果</a>
+              <a >牛肉</a>
+              <a >羊肉</a>
+              <a >猪肉</a>
+          </div>
+         <div class="ycd-header-search-content">
+                   <a href="" class="ycd-btn ycd-btn-clear-history">清空历史记录</a>
+        </div>
 </div>
 <!--头部搜索结果-->
 <div class="ycd-header-search-result">
-	
+	     <div class="ycd-header-content">
+                          <div class="ycd-cart-item">
+                                     <div class="ycd-cart-item-l">
+                                                  <div class="ycd-cart-info-title">
+
+		                                     </div>
+		                                     <div class="ycd-cart-info-price">
+
+		                                     </div>
+                                     </div>
+                                     <div class="ycd-cart-item-r">
+                                                   <div class="ycd-cart-product-container">
+
+                                                   </div>
+                                                   <div class="ycd-cart-product-operationdiv">
+
+                                                   </div>
+                                     </div>	
+                          </div>
+	     </div>
 </div>
-<!--首页分类列表-->
-<div class="ycd-index-categry-list">
-	  <div class="ycd-index-categry-item">
-	  	 <img src="images/index_catogry_icon_1.png">
-	  	 <span class="ycd-index-categry-name">肉类</span>
-	  </div>
-	  <div class="ycd-index-categry-item">
-	  	 <img src="images/index_catogry_icon_2.png">
-	  	 <span class="ycd-index-categry-name">蔬菜</span>
-	  </div>
-	  <div class="ycd-index-categry-item">
-	  	 <img src="images/index_catogry_icon_3.png">
-	  	 <span class="ycd-index-categry-name">粮油</span>
-	  </div>
-	  <div class="ycd-index-categry-item">
-	  	 <img src="images/index_catogry_icon_4.png">
-	  	 <span class="ycd-index-categry-name">副食</span>
-	  </div>
-</div>
-<!--楼层-->
-<div class="ycd-floor ycd-floor-1">
-          <img src="images/floor_organic_food.jpg">
-</div>
-<div class="ycd-floor ycd-floor-name">
-          <h2>精品特卖</h2>
-          <a class="ycd-more">更多 〉</a>
-</div>
-<!--楼层商品展示区域-->
-<div class="ycd-foor ycd-floor-goods-area">
-      <div class="ycd-floor-goods-area-item">
-      	<i class="count-down green">8折</i>
-        <h2>生态豌豆</h2>
-        <p class="info">
-        	<span class="price">￥2.8</span>
-        	<span class="weight">500g</span>
-        </p>
-        <div class="goods-img">
-					<a href=""><img src="images/goods_pic1.png"></a>
-		</div>
-      </div>
-      <div class="ycd-floor-goods-area-item">
-      	<i class="count-down orange">5折</i>
-        <h2>生态豌豆</h2>
-        <p class="info">
-        	<span class="price">￥2.8</span>
-        	<span class="weight">500g</span>
-        </p>
-        <div class="goods-img">
-					<a href=""><img src="images/goods_pic2.png"></a>
-		</div>
-      </div>
-      <div class="ycd-floor-goods-area-item">
-      	<i class="count-down green">8折</i>
-        <h2>生态豌豆</h2>
-        <p class="info">
-        	<span class="price">￥2.8</span>
-        	<span class="weight">500g</span>
-        </p>
-        <div class="goods-img">
-					<a href=""><img src="images/goods_pic1.png"></a>
-		</div>
-      </div>
-      <div class="ycd-floor-goods-area-item">
-      	<i class="count-down orange">5折</i>
-        <h2>生态豌豆</h2>
-        <p class="info">
-        	<span class="price">￥2.8</span>
-        	<span class="weight">500g</span>
-        </p>
-        <div class="goods-img">
-					<a href=""><img src="images/goods_pic2.png"></a>
-		</div>
-      </div>
-      <div class="ycd-floor-goods-area-item">
-      	<i class="count-down green">8折</i>
-        <h2>生态豌豆</h2>
-        <p class="info">
-        	<span class="price">￥2.8</span>
-        	<span class="weight">500g</span>
-        </p>
-        <div class="goods-img">
-					<a href=""><img src="images/goods_pic1.png"></a>
-		</div>
-      </div>
-      <div class="ycd-floor-goods-area-item">
-      	<i class="count-down orange">5折</i>
-        <h2>生态豌豆</h2>
-        <p class="info">
-        	<span class="price">￥2.8</span>
-        	<span class="weight">500g</span>
-        </p>
-        <div class="goods-img">
-					<a href=""><img src="images/goods_pic2.png"></a>
-		</div>
-      </div>
-</div>
-<div class="ycd-bottom-fixed">
-	
-</div>
+
+<div class="ycd-js-container">
+                              <!--头部轮播部分-->
+					<div class=" ycd-slider yc-slider-wt2" id="ycd-header-banner">
+						   <div class="ycd-slider-box ycd-slider-ks-ts">
+						   	  <div class="ycd-slider-wrap">
+						   	  	  <img src="images/banner/banner1.jpg"/>
+						   	  </div>	
+						   	   <div class="ycd-slider-wrap">
+						   	  	  <img src="images/banner/banner2.jpg"/>
+						   	  </div>	
+						   	   <div class="ycd-slider-wrap">
+						   	  	  <img src="images/banner/banner3.jpg"/>
+						   	  </div>	
+						   	   <div class="ycd-slider-wrap">
+						   	  	  <img src="images/banner/banner4.jpg"/>
+						   	  </div>	
+						   	   <div class="ycd-slider-wrap">
+						   	  	  <img src="images/banner/banner5.jpg"/>
+						   	  </div>	
+						   	   <div class="ycd-slider-wrap">
+						   	  	  <img src="images/banner/banner6.jpg"/>
+						   	  </div>	
+						   </div>
+						   <ul class="ycd-ks-wt">
+					              <li class="ycd-ks-t2"></li>
+					              <li></li>
+					              <li></li>
+					              <li></li>
+					              <li></li>
+					              <li></li>
+						   </ul>
+					</div>
+					<!--首页分类列表-->
+					<div class="ycd-index-categry-list">
+						  <div class="ycd-index-categry-item">
+						  	 <img src="images/index_catogry_icon_1.png">
+						  	 <span class="ycd-index-categry-name">肉类</span>
+						  </div>
+						  <div class="ycd-index-categry-item">
+						  	 <img src="images/index_catogry_icon_2.png">
+						  	 <span class="ycd-index-categry-name">蔬菜</span>
+						  </div>
+						  <div class="ycd-index-categry-item">
+						  	 <img src="images/index_catogry_icon_3.png">
+						  	 <span class="ycd-index-categry-name">粮油</span>
+						  </div>
+						  <div class="ycd-index-categry-item">
+						  	 <img src="images/index_catogry_icon_4.png">
+						  	 <span class="ycd-index-categry-name">副食</span>
+						  </div>
+					</div>
+					<!--楼层-->
+					<div class="ycd-floor ycd-floor-1">
+					          <img src="images/floor_organic_food.jpg">
+					</div>
+					<div class="ycd-floor ycd-floor-name">
+					          <h2>精品特卖</h2>
+					          <a class="ycd-more">更多 〉</a>
+					</div>
+					<!--楼层商品展示区域-->
+					<div class="ycd-foor ycd-floor-goods-area">
+					      <div class="ycd-floor-goods-area-item">
+					      	<i class="count-down green">8折</i>
+					        <h2>生态豌豆</h2>
+					        <p class="info">
+					        	<span class="price">￥2.8</span>
+					        	<span class="weight">500g</span>
+					        </p>
+					        <div class="goods-img">
+										<a href=""><img src="images/goods_pic1.png"></a>
+							</div>
+					      </div>
+					      <div class="ycd-floor-goods-area-item">
+					      	<i class="count-down orange">5折</i>
+					        <h2>生态豌豆</h2>
+					        <p class="info">
+					        	<span class="price">￥2.8</span>
+					        	<span class="weight">500g</span>
+					        </p>
+					        <div class="goods-img">
+										<a href=""><img src="images/goods_pic2.png"></a>
+							</div>
+					      </div>
+					      <div class="ycd-floor-goods-area-item">
+					      	<i class="count-down green">8折</i>
+					        <h2>生态豌豆</h2>
+					        <p class="info">
+					        	<span class="price">￥2.8</span>
+					        	<span class="weight">500g</span>
+					        </p>
+					        <div class="goods-img">
+										<a href=""><img src="images/goods_pic1.png"></a>
+							</div>
+					      </div>
+					      <div class="ycd-floor-goods-area-item">
+					      	<i class="count-down orange">5折</i>
+					        <h2>生态豌豆</h2>
+					        <p class="info">
+					        	<span class="price">￥2.8</span>
+					        	<span class="weight">500g</span>
+					        </p>
+					        <div class="goods-img">
+										<a href=""><img src="images/goods_pic2.png"></a>
+							</div>
+					      </div>
+					      <div class="ycd-floor-goods-area-item">
+					      	<i class="count-down green">8折</i>
+					        <h2>生态豌豆</h2>
+					        <p class="info">
+					        	<span class="price">￥2.8</span>
+					        	<span class="weight">500g</span>
+					        </p>
+					        <div class="goods-img">
+										<a href=""><img src="images/goods_pic1.png"></a>
+							</div>
+					      </div>
+					      <div class="ycd-floor-goods-area-item">
+					      	<i class="count-down orange">5折</i>
+					        <h2>生态豌豆</h2>
+					        <p class="info">
+					        	<span class="price">￥2.8</span>
+					        	<span class="weight">500g</span>
+					        </p>
+					        <div class="goods-img">
+										<a href=""><img src="images/goods_pic2.png"></a>
+							</div>
+					      </div>
+					</div>
+					<div class="ycd-bottom-fixed">
+						
+					</div>
+</div>	
 <!--底部导航栏-->
 <div class="ycd-bottom">
 	  <div class="ycd-foot-tab">
@@ -184,6 +227,8 @@
 	  	 </a>
 	  </div>
 </div>
-<script src="build/ycaidao.cat.js"></script>
+<script src="js/zepto.js"></script>
+<script src="js/zepto.slider.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
