modified index.html and categry.html

--- a/ycaidao2/index.html
+++ b/ycaidao2/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">-->
+    <!--考虑到iPhone ipad 使用的retina 屏幕 dpr=2 所以 1/2=0.5 进行适配对页面进行缩放 可能导致字体变化但是使用rem 暂时不存在此问题-->
+    <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5, user-scalable=0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="format-detection" content="telephone=no" />
@@ -13,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="css/ycaidao.css">
     <link rel="stylesheet" type="text/css" href="css/swiper-3.3.1.min.css">
     <title>有菜到手机客户端</title>
-        <script type="text/javascript">
+    <script type="text/javascript">
           var _curpage = 'index';
     </script>
 </head>
@@ -554,6 +556,219 @@
 					        </div>
 					    </div>
 					</div>
+					<div class="ycd-floor ycd-floor-name tc">
+					          <h2>追踪溯源</h2>
+					</div>
+					<div class="swiper-container">
+					    <div class="swiper-wrapper">
+					        <div class="swiper-slide ycd-foor ycd-floor-goods-area">
+													
+													      <div class="ycd-floor-goods-area-item">
+													        <h2>稻花香米（胡兵）</h2>
+													        <p class="info">
+													        	<span class="price">￥2.8</span>
+													        	/
+													        	<span class="weight">袋</span>
+													        </p>
+													        <div class="goods-img">
+																		<a href=""><img src="images/hot_product_pic1.png"></a>
+															</div>
+													      </div>
+													      <div class="ycd-floor-goods-area-item">
+													        <h2>小麦粉（五得利）</h2>
+													        <p class="info">
+													        	<span class="price">￥2.8</span>
+													        	/
+													        	<span class="weight">袋</span>
+													        </p>
+													        <div class="goods-img">
+																		<a href=""><img src="images/hot_product_pic2.png"></a>
+															</div>
+													      </div>
+													      <div class="ycd-floor-goods-area-item">
+													        <h2>大豆油（元宝）</h2>
+													        <p class="info">
+													        	<span class="price">￥2.8</span>
+													        	/
+													        	<span class="weight">袋</span>
+													        </p>
+													        <div class="goods-img">
+																		<a href=""><img src="images/hot_product_pic3.png"></a>
+															</div>
+													      </div>
+													      <div class="ycd-floor-goods-area-item">
+													        <h2>野生鸡蛋</h2>
+													        <p class="info">
+													        	<span class="price">￥2.8</span>
+													        	/
+													        	<span class="weight">袋</span>
+													        </p>
+													        <div class="goods-img">
+																		<a href=""><img src="images/hot_product_pic4.png"></a>
+															</div>
+													      </div>
+													      <div class="ycd-floor-goods-area-item">
+													        <h2>竹条藏茶</h2>
+													        <p class="info">
+													        	<span class="price">￥2.8</span>
+													        	/
+													        	<span class="weight">袋</span>
+													        </p>
+													        <div class="goods-img">
+																		<a href=""><img src="images/hot_product_pic5.png"></a>
+															</div>
+													      </div>
+													      <div class="ycd-floor-goods-area-item">
+													        <h2>乡下红薯</h2>
+													        <p class="info">
+													        	<span class="price">￥2.8</span>
+													        	/
+													        	<span class="weight">袋</span>
+													        </p>
+													        <div class="goods-img">
+																		<a href=""><img src="images/hot_product_pic6.png"></a>
+															</div>
+													      </div>
+													
+					        </div>
+					        <div class="swiper-slide ycd-foor ycd-floor-goods-area">
+					        	                         <div class="ycd-floor-goods-area-item">
+													        <h2>稻花香米（胡兵）</h2>
+													        <p class="info">
+													        	<span class="price">￥2.8</span>
+													        	/
+													        	<span class="weight">袋</span>
+													        </p>
+													        <div class="goods-img">
+																		<a href=""><img src="images/index_catogry_icon_1.png"></a>
+															</div>
+													      </div>
+													      <div class="ycd-floor-goods-area-item">
+													        <h2>小麦粉（五得利）</h2>
+													        <p class="info">
+													        	<span class="price">￥2.8</span>
+													        	/
+													        	<span class="weight">袋</span>
+													        </p>
+													        <div class="goods-img">
+																		<a href=""><img src="images/index_catogry_icon_2.png"></a>
+															</div>
+													      </div>
+													      <div class="ycd-floor-goods-area-item">
+													        <h2>大豆油（元宝）</h2>
+													        <p class="info">
+													        	<span class="price">￥2.8</span>
+													        	/
+													        	<span class="weight">袋</span>
+													        </p>
+													        <div class="goods-img">
+																		<a href=""><img src="images/index_catogry_icon_3.png"></a>
+															</div>
+													      </div>
+													      <div class="ycd-floor-goods-area-item">
+													        <h2>野生鸡蛋</h2>
+													        <p class="info">
+													        	<span class="price">￥2.8</span>
+													        	/
+													        	<span class="weight">袋</span>
+													        </p>
+													        <div class="goods-img">
+																		<a href=""><img src="images/index_catogry_icon_4.png"></a>
+															</div>
+													      </div>
+													      <div class="ycd-floor-goods-area-item">
+													        <h2>竹条藏茶</h2>
+													        <p class="info">
+													        	<span class="price">￥2.8</span>
+													        	/
+													        	<span class="weight">袋</span>
+													        </p>
+													        <div class="goods-img">
+																		<a href=""><img src="images/index_catogry_icon_3.png"></a>
+															</div>
+													      </div>
+													      <div class="ycd-floor-goods-area-item">
+													        <h2>乡下红薯</h2>
+													        <p class="info">
+													        	<span class="price">￥2.8</span>
+													        	/
+													        	<span class="weight">袋</span>
+													        </p>
+													        <div class="goods-img">
+																		<a href=""><img src="images/index_catogry_icon_4.png"></a>
+															</div>
+													      </div>
+					        </div>
+					        <div class="swiper-slide ycd-foor ycd-floor-goods-area">
+					        	                        <div class="ycd-floor-goods-area-item">
+													        <h2>稻花香米（胡兵）</h2>
+													        <p class="info">
+													        	<span class="price">￥2.8</span>
+													        	/
+													        	<span class="weight">袋</span>
+													        </p>
+													        <div class="goods-img">
+																		<a href=""><img src="images/index_catogry_icon_1.png"></a>
+															</div>
+													      </div>
+													      <div class="ycd-floor-goods-area-item">
+													        <h2>小麦粉（五得利）</h2>
+													        <p class="info">
+													        	<span class="price">￥2.8</span>
+													        	/
+													        	<span class="weight">袋</span>
+													        </p>
+													        <div class="goods-img">
+																		<a href=""><img src="images/hot_product_pic2.png"></a>
+															</div>
+													      </div>
+													      <div class="ycd-floor-goods-area-item">
+													        <h2>大豆油（元宝）</h2>
+													        <p class="info">
+													        	<span class="price">￥2.8</span>
+													        	/
+													        	<span class="weight">袋</span>
+													        </p>
+													        <div class="goods-img">
+																		<a href=""><img src="images/index_catogry_icon_3.png"></a>
+															</div>
+													      </div>
+													      <div class="ycd-floor-goods-area-item">
+													        <h2>野生鸡蛋</h2>
+													        <p class="info">
+													        	<span class="price">￥2.8</span>
+													        	/
+													        	<span class="weight">袋</span>
+													        </p>
+													        <div class="goods-img">
+																		<a href=""><img src="images/hot_product_pic4.png"></a>
+															</div>
+													      </div>
+													      <div class="ycd-floor-goods-area-item">
+													        <h2>竹条藏茶</h2>
+													        <p class="info">
+													        	<span class="price">￥2.8</span>
+													        	/
+													        	<span class="weight">袋</span>
+													        </p>
+													        <div class="goods-img">
+																		<a href=""><img src="images/index_catogry_icon_3.png"></a>
+															</div>
+													      </div>
+													      <div class="ycd-floor-goods-area-item">
+													        <h2>乡下红薯</h2>
+													        <p class="info">
+													        	<span class="price">￥2.8</span>
+													        	/
+													        	<span class="weight">袋</span>
+													        </p>
+													        <div class="goods-img">
+																		<a href=""><img src="images/hot_product_pic6.png"></a>
+															</div>
+													      </div>
+					        </div>
+					    </div>
+					</div>
 					<!--楼层商品展示区域-->
 
 					<div class="ycd-bottom-fixed">
@@ -591,5 +806,12 @@
 <script src="js/zepto.slider.js"></script>
 <script src="js/swiper3.1.zepto.js"></script>
 <script src="js/app.js"></script>
+<script>
+	   //初始化swiper
+   var indexCategrySwiper = new Swiper ('.swiper-container', {
+    direction: 'horizontal',
+    loop: true
+  })      
+</script>
 </body>
 </html>
