http.js add some method

--- a/webtools/http.html
+++ b/webtools/http.html
@@ -5,9 +5,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>http</title>
 	<link rel="stylesheet" href="">
+	<script src="js/common.js"></script>
 	<script src="js/http.js"></script>
 </head>
 <body>
-
+<form action="upload" method="post" accept-charset="utf-8">
+	 <input type="file" data-uploadTo="http://www.baidu.com"></input>
+</form>
 </body>
 </html>
