add cart.html and modifed the foot bottom nav!

--- a/ycaidao2/category.html
+++ b/ycaidao2/category.html
@@ -334,25 +334,25 @@
 <!--底部导航栏-->
 <div class="ycd-bottom">
 	  <div class="ycd-foot-tab">
-	  	 <a class="ycd-foot-tab-a ycd-foot-tab-a-cur" href="javascript:void(0);">
+	  	 <a class="ycd-foot-tab-a " href="index.html">
 	  	 	<span class="ycd-font-icon ycd-foot-icon ycd-foot-icon-index " data-current="&#xe609;" data-default="&#xe60a;"></span>
 	  	    <div class="ycd-foot-tab-name">首页</div>
 	  	 </a>
 	  </div>
 	  <div class="ycd-foot-tab">
-	  	 <a class="ycd-foot-tab-a" href="javascript:void(0);">
+	  	 <a class="ycd-foot-tab-a ycd-foot-tab-a-cur" href="category.html">
 	  	 	<span class="ycd-font-icon ycd-foot-icon ycd-foot-icon-categry" data-current="&#xe626;" data-default="&#xe623;"></span>
 	  	    <div class="ycd-foot-tab-name">全部商品</div>
 	  	 </a>
 	  </div>
 	  <div class="ycd-foot-tab">
-	  	 <a class="ycd-foot-tab-a" href="javascript:void(0);">
+	  	 <a class="ycd-foot-tab-a" href="cart.html">
 	  	 	<span class="ycd-font-icon ycd-foot-icon ycd-foot-icon-cart" data-current="&#xe616;" data-default="&#xe617;"></span>
 	  	    <div class="ycd-foot-tab-name">购物车</div>
 	  	 </a>
 	  </div>
 	  <div class="ycd-foot-tab">
-	  	 <a class="ycd-foot-tab-a" href="javascript:void(0);">
+	  	 <a class="ycd-foot-tab-a" href="my.html">
 	  	 	<span class="ycd-font-icon ycd-foot-icon ycd-foot-icon-my" data-current="&#xe61b;" data-default="&#xe61c;"></span>
 	  	    <div class="ycd-foot-tab-name">我的</div>
 	  	 </a>
