--- a/webtools/http.html
+++ b/webtools/http.html
@@ -9,8 +9,30 @@
 	<script src="js/http.js"></script>
 </head>
 <body>
-<form action="upload" method="post" accept-charset="utf-8">
+<!--<form action="upload" method="post" accept-charset="utf-8">
 	 <input type="file" data-uploadTo="http://www.baidu.com"></input>
-</form>
+</form>-->
+<style type="text/css" media="screen">
+	 .fileDropTarget{
+	 	width:200px;
+	 	min-height:50px;
+	 	line-height:50px;
+	 	background:blue;
+	 	margin-bottom:10px;
+	 	color:#fff;
+	 	text-align:center;
+	 }
+</style>
+<div class="fileDropTarget" data-uploadto="http://localhost:808/upload_file.php"></div>
+<div class="fileDropTarget" data-uploadto="http://localhost:808/upload_file.php"></div>
+<div class="fileDropTarget" data-uploadto="http://localhost:808/upload_file.php"></div>
+<div class="fileDropTarget" data-uploadto="http://localhost:808/upload_file.php"></div>
+<div class="fileDropTarget" data-uploadto="http://localhost:808/upload_file.php"></div>
+<div class="fileDropTarget" data-uploadto="http://localhost:808/upload_file.php"></div>
+<div class="fileDropTarget" data-uploadto="http://localhost:808/upload_file.php"></div>
+<div class="fileDropTarget" data-uploadto="http://localhost:808/upload_file.php"></div>
+<div class="fileDropTarget" data-uploadto="http://localhost:808/upload_file.php"></div>
+
+
 </body>
 </html>
