modified the template

--- a/ycaidao2/category.html
+++ b/ycaidao2/category.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/slider.css">
     <link rel="stylesheet" type="text/css" href="css/ycaidao.css">
     <link rel="stylesheet" type="text/css" href="css/category.css">
+    <link rel="stylesheet" type="text/css" href="css/alert.css">
     <link rel="stylesheet" type="text/css" href="css/swiper-3.3.1.min.css">
     <title>有菜到手机客户端</title>
     <script type="text/javascript">
@@ -93,7 +94,7 @@
 						   	        <a href="javascript:void(0);" class="ycd-font-icon collect">&#xe62c;</a>
 						   	        <div class="cart-operation">
 						   	        	 <span class="ycd-font-icon cut">&#xe62a;</span>
-						   	        	 <span class="amount">0</span>
+						   	        	  <input type="number" class="amount" id="number" onblur="changePrice(this);" name="number" value="1" min="1" max="1" />
 						   	        	 <span class="ycd-font-icon increse">&#xe62d;</span>
 						   	        </div>
 						   </div>
@@ -115,7 +116,7 @@
 						   	        <a href="javascript:void(0);" class="ycd-font-icon collect">&#xe62c;</a>
 						   	        <div class="cart-operation">
 						   	        	 <span class="ycd-font-icon cut">&#xe62a;</span>
-						   	        	 <span class="amount">0</span>
+						   	        	  <input type="number" class="amount" id="number" onblur="changePrice(this);" name="number" value="1" min="1" max="1" />
 						   	        	 <span class="ycd-font-icon increse">&#xe62d;</span>
 						   	        </div>
 						   </div>
@@ -137,7 +138,7 @@
 						   	        <a href="javascript:void(0);" class="ycd-font-icon collect">&#xe62c;</a>
 						   	        <div class="cart-operation">
 						   	        	 <span class="ycd-font-icon cut">&#xe62a;</span>
-						   	        	 <span class="amount">0</span>
+						   	        	  <input type="number" class="amount" id="number" onblur="changePrice(this);" name="number" value="1" min="1" max="1" />
 						   	        	 <span class="ycd-font-icon increse">&#xe62d;</span>
 						   	        </div>
 						   </div>
@@ -159,7 +160,7 @@
 						   	        <a href="javascript:void(0);" class="ycd-font-icon collect">&#xe62c;</a>
 						   	        <div class="cart-operation">
 						   	        	 <span class="ycd-font-icon cut">&#xe62a;</span>
-						   	        	 <span class="amount">0</span>
+						   	        	  <input type="number" class="amount" id="number" onblur="changePrice(this);" name="number" value="1" min="1" max="1" />
 						   	        	 <span class="ycd-font-icon increse">&#xe62d;</span>
 						   	        </div>
 						   </div>
@@ -182,7 +183,7 @@
 						   	        <a href="javascript:void(0);" class="ycd-font-icon collect">&#xe62c;</a>
 						   	        <div class="cart-operation">
 						   	        	 <span class="ycd-font-icon cut">&#xe62a;</span>
-						   	        	 <span class="amount">0</span>
+						   	        	  <input type="number" class="amount" id="number" onblur="changePrice(this);" name="number" value="1" min="1" max="1" />
 						   	        	 <span class="ycd-font-icon increse">&#xe62d;</span>
 						   	        </div>
 						   </div>
@@ -207,7 +208,7 @@
 						   	        <a href="javascript:void(0);" class="ycd-font-icon collect">&#xe62c;</a>
 						   	        <div class="cart-operation">
 						   	        	 <span class="ycd-font-icon cut">&#xe62a;</span>
-						   	        	 <span class="amount">0</span>
+						   	        	  <input type="number" class="amount" id="number" onblur="changePrice(this);" name="number" value="1" min="1" max="1" />
 						   	        	 <span class="ycd-font-icon increse">&#xe62d;</span>
 						   	        </div>
 						   </div>
@@ -229,7 +230,7 @@
 						   	        <a href="javascript:void(0);" class="ycd-font-icon collect">&#xe62c;</a>
 						   	        <div class="cart-operation">
 						   	        	 <span class="ycd-font-icon cut">&#xe62a;</span>
-						   	        	 <span class="amount">0</span>
+						   	        	  <input type="number" class="amount" id="number" onblur="changePrice(this);" name="number" value="1" min="1" max="1" />
 						   	        	 <span class="ycd-font-icon increse">&#xe62d;</span>
 						   	        </div>
 						   </div>
@@ -251,7 +252,7 @@
 						   	        <a href="javascript:void(0);" class="ycd-font-icon collect">&#xe62c;</a>
 						   	        <div class="cart-operation">
 						   	        	 <span class="ycd-font-icon cut">&#xe62a;</span>
-						   	        	 <span class="amount">0</span>
+						   	        	  <input type="number" class="amount" id="number" onblur="changePrice(this);" name="number" value="1" min="1" max="1" />
 						   	        	 <span class="ycd-font-icon increse">&#xe62d;</span>
 						   	        </div>
 						   </div>
@@ -273,7 +274,7 @@
 						   	        <a href="javascript:void(0);" class="ycd-font-icon collect">&#xe62c;</a>
 						   	        <div class="cart-operation">
 						   	        	 <span class="ycd-font-icon cut">&#xe62a;</span>
-						   	        	 <span class="amount">0</span>
+						   	        	  <input type="number" class="amount" id="number" onblur="changePrice(this);" name="number" value="1" min="1" max="1" />
 						   	        	 <span class="ycd-font-icon increse">&#xe62d;</span>
 						   	        </div>
 						   </div>
@@ -296,7 +297,7 @@
 						   	        <a href="javascript:void(0);" class="ycd-font-icon collect">&#xe62c;</a>
 						   	        <div class="cart-operation">
 						   	        	 <span class="ycd-font-icon cut">&#xe62a;</span>
-						   	        	 <span class="amount">0</span>
+						   	        	  <input type="number" class="amount" id="number" onblur="changePrice(this);" name="number" value="1" min="1" max="1" />
 						   	        	 <span class="ycd-font-icon increse">&#xe62d;</span>
 						   	        </div>
 						   </div>
@@ -331,6 +332,15 @@
 						
 		</div>
 </div>
+<!--底部提示框-->
+<div class="ycd-bottom-cart-info" id="ECS_CARTINFO">
+      <div class="cart-info-total">
+      	<a href="flow.php" title="查看购物车">您的购物车中有 5 件商品，总计金额 ￥<span>2836.00</span>。</a>
+      </div>
+	  <a class="cart-info-checkout">
+	  	结算(2)
+	  </a>
+</div>
 <!--底部导航栏-->
 <div class="ycd-bottom">
 	  <div class="ycd-foot-tab">
@@ -360,9 +370,24 @@
 </div>
 <script src="js/zepto.js"></script>
 <script src="js/zepto.slider.js"></script>
+<script src="js/zepto.popup.js"></script>
 <script src="js/swiper3.1.zepto.js"></script>
 <script src="js/app.js"></script>
 <script>
+    //测试弹出窗口插件
+    (function($){
+        $('body').popup({
+            title:'表单提交'
+            ,id:'pop-1'
+            ,closeOnOk:true
+            ,ok:'提交'
+            ,onOk:function(){
+               
+            },
+            message:'这是一个弹出框的测试'
+        });
+
+    })(Zepto);
 	var mySwiper2 = new Swiper('#swiper-container2',{
 	watchSlidesProgress : true,
 	watchSlidesVisibility : true,
