this is new version

--- a/webtools/http.html
+++ b/webtools/http.html
@@ -34,5 +34,10 @@
 <div class="fileDropTarget" data-uploadto="http://localhost:808/upload_file.php"></div>
 
 
+<a href="http://img5.imgtn.bdimg.com/it/u=1478257864,2882073929&fm=21&gp=0.jpg" >测试1</a>
+<a href="http://apis.baidu.com/apistore/weatherservice/citylist" >测试2</a>
+<a href="http://apis.baidu.com/apistore/weatherservice/citylist" >测试3</a>
+<a href="http://apis.baidu.com/apistore/weatherservice/citylist" >测试4</a>
+
 </body>
 </html>
