--- a/ycaidao2/my.html
+++ b/ycaidao2/my.html
@@ -92,7 +92,7 @@
 <div class="ycd-my-user-op-list">
 	   <dl>
 		   <a href="">
-		   		<span class="ycd-font-icon ycd-my-op-icon">&#xe63d;</span>
+		   		<span class="ycd-font-icon ycd-my-op-icon">&#xe63b;</span>
 		   		<dt>关于有菜到</dt>
 		   		<dd>></dd>
 		   	</a>
