--- a/ycaidao2/my.html
+++ b/ycaidao2/my.html
@@ -29,7 +29,7 @@
 <body>
 <!--头部部分-->
 <div class="ycd-my-top-bar">
-     <a href="" class="ycd-my-settings">设置</a>
+     <!-- <a href="" class="ycd-my-settings">设置</a> -->
 	 <div class="ycd-my-avatar">
 	 	 <a href="" class="ycd-my-img">
 	 	 	 <img src="images/avatar.png" alt="">
@@ -112,9 +112,9 @@
 		   	</a>
 	   	</dl>
 	   <dl>
-		   <a href="">
+		   <a href="" class="ycd-light-green">
 		   		<span class="ycd-font-icon ycd-my-op-icon">&#xe63c;</span>
-		   		<dt>客服电话 4008-114-510</dt>
+		   		<dt class="ycd-light-green">客服电话 4008-114-510</dt>
 		   		<dd>></dd>
 		   	</a>
 	   	</dl>
