--- a/webtools/localstorge.html
+++ b/webtools/localstorge.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>localstorge</title>
 	<link rel="stylesheet" href="">
+	<script src="js/localstorge.js"></script>
 </head>
 <body>
 
