--- a/ycaidao2/cart.html
+++ b/ycaidao2/cart.html
@@ -31,7 +31,7 @@
 <div class="ycd-js-container">
         <div class="yc-cart-list">
         	                         <div class="yc-cart-list-item">
-						   	        <a href="" class="img">
+						   	        <a href="detail.html" class="img">
 						   	        	<img src="images/pd-pic1.png" alt="">
 						   	        </a>
 						   	        <div class="cart-price">
@@ -53,7 +53,7 @@
 						   	        </div>
 						   </div>
 						   <div class="yc-cart-list-item">
-						   	        <a href="" class="img">
+						   	        <a href="detail.html" class="img">
 						   	        	<img src="images/pd-pic2.png" alt="">
 						   	        </a>
 						   	        <div class="cart-price">
@@ -75,7 +75,7 @@
 						   	        </div>
 						   </div>
 						   <div class="yc-cart-list-item">
-						   	        <a href="" class="img">
+						   	        <a href="detail.html" class="img">
 						   	        	<img src="images/pd-pic3.png" alt="">
 						   	        </a>
 						   	        <div class="cart-price">
@@ -118,7 +118,7 @@
                 <div class="ycd-total">
                    共 <span class="total">223</span><span class="int">元</span><span class="promotion">(免运费)</span>
                 </div>
-                <div class="ycd-operation">
+                <div class="ycd-operation" onclick="location.href='jiesuan.html'">
                      结算 <span class="amount">(2)</span>
                 </div>
 	</div>
