--- a/ycaidao2/detail.html
+++ b/ycaidao2/detail.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="css/ycaidao.css">
     <link rel="stylesheet" type="text/css" href="css/detail.css">
     <link rel="stylesheet" type="text/css" href="css/alert.css">
+    <link rel="stylesheet" type="text/css" href="css/cart.css">
     <link rel="stylesheet" type="text/css" href="css/swiper-3.3.1.min.css">
     <title>有菜到手机客户端</title>
     <script type="text/javascript">
@@ -23,9 +24,11 @@
 </head>
 <body>
 <!--像其它页面头部-->
-<div class="ycd-ot-header-top">
-	 <a href="javascript:void(0);" class="ycd-ot-return"><</a>
-	 <h2 class="title">详情</h2>
+<div class="ycd-header-search-box-top">
+	<div class="ycd-js-search-input-box">
+	    <i class="ycd-font-icon ycd-js-back-icon inline-block">&#xe633;</i>
+	    <h2>详情</h2>
+	</div>
 </div>
 <div class="ycd-js-container">
 	<div class="ycd-detail-page-container">
