--- a/ycaidao2/my.html
+++ b/ycaidao2/my.html
@@ -31,7 +31,7 @@
 <div class="ycd-my-top-bar">
      <!-- <a href="" class="ycd-my-settings">设置</a> -->
 	 <div class="ycd-my-avatar">
-	 	 <a href="" class="ycd-my-img">
+	 	 <a href="profile.html" class="ycd-my-img">
 	 	 	 <img src="images/avatar.png" alt="">
 	 	 </a>
 	 	 <span class="ycd-my-username">
@@ -51,7 +51,7 @@
 					  	 <span class="ycd-font-icon ycd-my-categry-icon  ycd-icon-dingdan">&#xe63a;</span>
 					  	 <span class="ycd-my-categry-name">我的订单</span>
 					  </a>
-					  <a class="ycd-my-categry-item" href="">
+					  <a class="ycd-my-categry-item" href="bounus.html">
 					  	 <span class="ycd-font-icon ycd-my-categry-icon  ycd-icon-hongbao">&#xe63b;</span>
 					  	 <span class="ycd-my-categry-name">优惠红包</span>
 					  </a>
@@ -64,7 +64,7 @@
         </div>
         <div class="swiper-slide">
         	<div class="ycd-my-categry-list">
-					  <a class="ycd-my-categry-item" href="">
+					  <a class="ycd-my-categry-item" >
 					  	 <span class="ycd-font-icon ycd-my-categry-icon  ycd-icon-mybounus">&#xe637;</span>
 					  	 <span class="ycd-my-categry-name">我的钱包</span>
 					  </a>
@@ -91,28 +91,28 @@
 <!--用户中心操作列表-->
 <div class="ycd-my-user-op-list">
 	   <dl>
-		   <a href="">
+		   <a href="about.html">
 		   		<span class="ycd-font-icon ycd-my-op-icon">&#xe63b;</span>
 		   		<dt>关于有菜到</dt>
 		   		<dd>></dd>
 		   	</a>
 	   	</dl>
 	   	<dl>
-		   <a href="">
+		   <a href="collect.html">
 		   		<span class="ycd-font-icon ycd-my-op-icon">&#xe63d;</span>
 		   		<dt>我的搜藏</dt>
 		   		<dd>></dd>
 		   	</a>
 	   	</dl>
 	   <dl>
-		   <a href="">
+		   <a href="newproduct.html">
 		   		<span class="ycd-font-icon ycd-my-op-icon">&#xe63d;</span>
 		   		<dt>提交新品需求</dt>
 		   		<dd>></dd>
 		   	</a>
 	   	</dl>
 	   <dl>
-		   <a href="">
+		   <a href="reply.html">
 		   		<span class="ycd-font-icon ycd-my-op-icon">&#xe639;</span>
 		   		<dt>意见反馈</dt>
 		   		<dd>></dd>
@@ -128,25 +128,25 @@
 <!--底部导航栏-->
 <div class="ycd-bottom">
 	  <div class="ycd-foot-tab">
-	  	 <a class="ycd-foot-tab-a ycd-foot-tab-a-cur" href="javascript:void(0);">
+	  	 <a class="ycd-foot-tab-a " href="index.html">
 	  	 	<span class="ycd-font-icon ycd-foot-icon ycd-foot-icon-index " data-current="&#xe609;" data-default="&#xe60a;"></span>
 	  	    <div class="ycd-foot-tab-name">首页</div>
 	  	 </a>
 	  </div>
 	  <div class="ycd-foot-tab">
-	  	 <a class="ycd-foot-tab-a" href="javascript:void(0);">
+	  	 <a class="ycd-foot-tab-a" href="category.html">
 	  	 	<span class="ycd-font-icon ycd-foot-icon ycd-foot-icon-categry" data-current="&#xe626;" data-default="&#xe623;"></span>
 	  	    <div class="ycd-foot-tab-name">全部商品</div>
 	  	 </a>
 	  </div>
 	  <div class="ycd-foot-tab">
-	  	 <a class="ycd-foot-tab-a" href="javascript:void(0);">
+	  	 <a class="ycd-foot-tab-a" href="cart.html">
 	  	 	<span class="ycd-font-icon ycd-foot-icon ycd-foot-icon-cart" data-current="&#xe616;" data-default="&#xe617;"></span>
 	  	    <div class="ycd-foot-tab-name">购物车</div>
 	  	 </a>
 	  </div>
 	  <div class="ycd-foot-tab">
-	  	 <a class="ycd-foot-tab-a" href="javascript:void(0);">
+	  	 <a class="ycd-foot-tab-a ycd-foot-tab-a-cur" href="my.html">
 	  	 	<span class="ycd-font-icon ycd-foot-icon ycd-foot-icon-my" data-current="&#xe61b;" data-default="&#xe61c;"></span>
 	  	    <div class="ycd-foot-tab-name">我的</div>
 	  	 </a>
