--- a/ycaidao2/category.html
+++ b/ycaidao2/category.html
@@ -77,7 +77,7 @@
 					</ul>
 					<div class="yc-swiper-right-list-content">
 						   <div class="yc-swiper-right-list-item">
-						   	        <a href="" class="img">
+						   	        <a href="detail.html" class="img">
 						   	        	<img src="images/pd-pic1.png" alt="">
 						   	        </a>
 						   	        <div class="cart-price">
@@ -99,7 +99,7 @@
 						   	        </div>
 						   </div>
 						   <div class="yc-swiper-right-list-item">
-						   	        <a href="" class="img">
+						   	        <a href="detail.html" class="img">
 						   	        	<img src="images/pd-pic2.png" alt="">
 						   	        </a>
 						   	        <div class="cart-price">
@@ -121,7 +121,7 @@
 						   	        </div>
 						   </div>
 						   <div class="yc-swiper-right-list-item">
-						   	        <a href="" class="img">
+						   	        <a href="detail.html" class="img">
 						   	        	<img src="images/pd-pic3.png" alt="">
 						   	        </a>
 						   	        <div class="cart-price">
@@ -143,7 +143,7 @@
 						   	        </div>
 						   </div>
 						   <div class="yc-swiper-right-list-item">
-						   	        <a href="" class="img">
+						   	        <a href="detail.html" class="img">
 						   	        	<img src="images/pd-pic4.png" alt="">
 						   	        </a>
 						   	        <div class="cart-price">
@@ -166,7 +166,7 @@
 						   </div>
 
                             <div class="yc-swiper-right-list-item">
-						   	        <a href="" class="img">
+						   	        <a href="detail.html" class="img">
 						   	        	<img src="images/pd-pic2.png" alt="">
 						   	        </a>
 						   	        <div class="cart-price">
@@ -191,7 +191,7 @@
 					</div>
 					<div class="yc-swiper-right-list-content">
 						   <div class="yc-swiper-right-list-item">
-						   	        <a href="" class="img">
+						   	        <a href="detail.html" class="img">
 						   	        	<img src="images/pd-pic4.png" alt="">
 						   	        </a>
 						   	        <div class="cart-price">
@@ -213,7 +213,7 @@
 						   	        </div>
 						   </div>
 						   <div class="yc-swiper-right-list-item">
-						   	        <a href="" class="img">
+						   	        <a href="detail.html" class="img">
 						   	        	<img src="images/pd-pic3.png" alt="">
 						   	        </a>
 						   	        <div class="cart-price">
@@ -235,7 +235,7 @@
 						   	        </div>
 						   </div>
 						   <div class="yc-swiper-right-list-item">
-						   	        <a href="" class="img">
+						   	        <a href="detail.html" class="img">
 						   	        	<img src="images/pd-pic2.png" alt="">
 						   	        </a>
 						   	        <div class="cart-price">
@@ -257,7 +257,7 @@
 						   	        </div>
 						   </div>
 						   <div class="yc-swiper-right-list-item">
-						   	        <a href="" class="img">
+						   	        <a href="detail.html" class="img">
 						   	        	<img src="images/pd-pic1.png" alt="">
 						   	        </a>
 						   	        <div class="cart-price">
@@ -280,7 +280,7 @@
 						   </div>
 
                             <div class="yc-swiper-right-list-item">
-						   	        <a href="" class="img">
+						   	        <a href="detail.html" class="img">
 						   	        	<img src="images/pd-pic4.png" alt="">
 						   	        </a>
 						   	        <div class="cart-price">
@@ -337,7 +337,7 @@
       <div class="cart-info-total">
       	<a href="flow.php" title="查看购物车">您的购物车中有 5 件商品，总计金额 ￥<span>2836.00</span>。</a>
       </div>
-	  <a class="cart-info-checkout">
+	  <a class="cart-info-checkout" href="jiesuan.html">
 	  	结算(2)
 	  </a>
 </div>
@@ -350,13 +350,13 @@
 	  	 </a>
 	  </div>
 	  <div class="ycd-foot-tab">
-	  	 <a class="ycd-foot-tab-a ycd-foot-tab-a-cur" href="category.html">
+	  	 <a class="ycd-foot-tab-a ycd-foot-tab-a-cur " href="category.html">
 	  	 	<span class="ycd-font-icon ycd-foot-icon ycd-foot-icon-categry" data-current="&#xe626;" data-default="&#xe623;"></span>
 	  	    <div class="ycd-foot-tab-name">全部商品</div>
 	  	 </a>
 	  </div>
 	  <div class="ycd-foot-tab">
-	  	 <a class="ycd-foot-tab-a" href="cart.html">
+	  	 <a class="ycd-foot-tab-a " href="cart.html">
 	  	 	<span class="ycd-font-icon ycd-foot-icon ycd-foot-icon-cart" data-current="&#xe616;" data-default="&#xe617;"></span>
 	  	    <div class="ycd-foot-tab-name">购物车</div>
 	  	 </a>
